--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,11 @@ img {
     height: auto;
 }
 /* шапка сайту */
+.header {
+    border-bottom: 1px solid #E7E9FC;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
 .nav-header {
     align-items: center;
     display: flex;
@@ -508,8 +513,7 @@ margin-right: 24px;
 
 }
 .portfolio-border{
-    padding-top: 32px;
-    padding-bottom: 32px;
+    padding: 32px 16px;
     border: 1px solid var(--footer-text-color);
 
 }
@@ -540,7 +544,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
     text-decoration: none;
 }
 .portfolio-title{
-   padding-left: 16px;
+   padding-left: 0;
     margin-top: 0;
     margin-bottom: 8px;
 
@@ -552,7 +556,7 @@ box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.1
    
 }
 .portfolio-text {
-    padding-left: 16px;
+    padding-left: 0;
     margin-top: 0;
     margin-bottom: 0;
 
